<resources>
    <string name="app_name">Portal de Recuerdos</string>
    <string name="title_activity_inicio_sesion">InicioSesion</string>
    <string name="inicioSesion">Inicio Sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="registreseAqui">Regístrese</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_registro">Registro</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="error_intro">Llenar los campos:</string>
    <string name="error_nombrevacio">Ingrese su nombre</string>
    <string name="error_usuariovacio">Ingrese usuario</string>
    <string name="error_passwordvacio">Ingrese password</string>
    <string name="title_activity_home">Home</string>
    <string name="combinacionincorrecta">Usuario y/o constraseña incorrectos</string>
    <string name="esperar">Por favor espere...</string>
    <string name="registrando">Registrando usuario</string>
    <string name="iniciandoSesion">Iniciando sesión</string>
    <string name="error_registro">Error en el registro. Intente nuevamente</string>
    <string name="home_icon">Home</string>
    <string name="profile_icon">Perfil</string>
    <string name="logout_icon">Desconectarse</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="creation_icon">Zona creación</string>
    <string name="friends_icon">Amigos</string>
    <string name="title_activity_creacion">Creacion</string>
    <string name="title_activity_amigos">Amigos</string>
    <string name="creacion_title">Zona de creación</string>
    <string name="recuerdo">Recuerdo</string>
    <string name="lugar">Lugar</string>
    <string name="objeto">Objeto</string>
    <string name="nota">Nota</string>
    <string name="title_activity_crear_recuerdo">CrearRecuerdo</string>
    <string name="crear_recuerdo">Crea tu recuerdo</string>
    <string name="descripcion">Describe tu recuerdo</string>
    <string name="hora_recuerdo">¿Recuerdas cuándo fue?</string>
    <string name="no_recuerdo">No recuerdo</string>
    <string name="recuerdo_vacio">Recuerdo vacío</string>
    <string name="creando_recuerdo">Creando recuerdo</string>
    <string name="busca_recuerdos">Busca los recuerdos</string>
    <string name="buscar_button">Buscar ya</string>
    <string name="title_activity_lista_recuerdos">ListaRecuerdos</string>
    <string name="resultados_busqueda">Resultados la búsqueda</string>
    <string name="no_resultados">Ningún resultado</string>
    <string name="cargando_recuerdos">Cargando recuerdos</string>
</resources>
