<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/action_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home_icon"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_perfil"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_icon"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_creation"
        android:icon="@drawable/creation_icon"
        android:title="@string/creation_icon"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_amigos"
        android:icon="@drawable/friends_icon"
        android:title="@string/friends_icon"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout_icon"
        app:showAsAction="ifRoom"/>
</menu>