<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ricardogarcia.portalderecuerdos.InicioSesion"
    tools:showIn="@layout/activity_inicio_sesion">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicioSesion"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usuarioTexto"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@color/background_text"
                android:hint="@string/usuario"
                android:paddingLeft="@dimen/margin_between" />

            <EditText
                android:id="@+id/passwordTexto"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/background_text"
                android:hint="@string/password"
                android:paddingLeft="@dimen/margin_between"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/registroTexto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registreseAqui"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:onClick="irRegistro"
                    android:clickable="true" />
            </LinearLayout>

            <Button
                android:id="@+id/botonIngreso"
                android:layout_width="190dp"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/ingresar"
                android:background="@drawable/background_color"
                android:textSize="@dimen/text_size"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:onClick="validarUsuario" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
