<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ricardogarcia.portalderecuerdos.Creacion"
    tools:showIn="@layout/activity_creacion">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleCreacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top_title"
                android:text="@string/creacion_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:layout_below="@id/titleCreacion"
                android:layout_marginTop="@dimen/margin_top_home"
                android:gravity="center">

                <TableRow>
                    <ImageButton
                        android:id="@+id/recuerdo_button"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/recuerdo_icon"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:onClick="irCrearRecuerdo"/>
                    <ImageButton
                        android:id="@+id/lugar_button"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/lugar_icon"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:onClick="irCrearLugar"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recuerdo"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lugar"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:layout_marginTop="@dimen/button_height">
                    <ImageButton
                        android:id="@+id/objeto_button"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/objeto_icon"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:onClick="irCrearObjeto"/>
                    <ImageButton
                        android:id="@+id/nota_button"
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:background="@android:color/transparent"
                        android:src="@drawable/nota_icon"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:onClick="irCrearNota"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/objeto"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nota"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
