<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ricardogarcia.portalderecuerdos.CrearRecuerdo"
    tools:showIn="@layout/activity_crear_recuerdo">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/crearRecuerdoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_title"
                android:gravity="center_horizontal"
                android:text="@string/crear_recuerdo"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/crearRecuerdoText"
                android:stretchColumns="1">

                <TableRow android:layout_marginTop="@dimen/margin_top_title">

                    <TextView
                        android:id="@+id/jobPosition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/descripcion"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />


                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top">

                    <EditText
                        android:id="@+id/recuerdoText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:inputType="text|textMultiLine"
                        android:textSize="@dimen/text_size"
                        android:maxLength="2000"
                        android:maxLines="4"/>
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top_title">

                    <TextView
                        android:id="@+id/hora"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/hora_recuerdo"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top_title">
                <DatePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/diaRecuerdo"
                    android:calendarViewShown="false"/>

                    <TimePicker
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/horaRecuerdo" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_top_title">
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_recuerdo"
                        android:id="@+id/checkBoxFecha"
                        android:layout_column="0" />
                </TableRow>



            </TableLayout>

        </RelativeLayout>
    </ScrollView>





</RelativeLayout>
