<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ricardogarcia.portalderecuerdos.Registro"
    tools:showIn="@layout/activity_registro">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/tab1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/headerLbl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="@dimen/abc_control_padding_material"
                android:paddingRight="@dimen/abc_control_padding_material"
                android:layout_marginTop="@dimen/margin_top_title"
                android:text="@string/registro"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"
                android:layout_below="@id/headerLbl2">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_title">
                    <TextView android:text="@string/nombre"
                        android:id="@+id/nombre"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:layout_weight="1"
                        android:textColor="@color/material_blue_grey_800"
                        android:textSize="@dimen/text_size"/>

                    <EditText
                        android:id="@+id/nombreTexto"
                        android:inputType="textPersonName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size"
                        android:background="@color/background_text"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top">

                    <TextView
                        android:id="@+id/usuario"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:text="@string/usuario"
                        android:textColor="@color/material_blue_grey_800"
                        android:textSize="@dimen/text_size" />

                    <EditText
                        android:id="@+id/usuarioTexto"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:background="@color/background_text"
                        android:textSize="@dimen/text_size" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top">
                    <TextView android:text="@string/password"
                        android:id="@+id/password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="start"
                        android:paddingLeft="@dimen/padding_left"
                        android:layout_weight="1"
                        android:textColor="@color/material_blue_grey_800"
                        android:textSize="@dimen/text_size"/>
                    <EditText
                        android:id="@+id/passwordTexto"
                        android:inputType="textPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size"
                        android:background="@color/background_text"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
